--- a/assets/user_defined/sales/sales.css
+++ b/assets/user_defined/sales/sales.css
@@ -56,11 +56,11 @@ only screen and (max-width: 760px),
 	
 	/*Label the data*/
 	
-	td:nth-of-type(1):before { content: "Item Name"; }
-	td:nth-of-type(2):before { content: "BEG"; }
-	td:nth-of-type(3):before { content: "IN"; }
-	td:nth-of-type(4):before { content: "OUT"; }
-	td:nth-of-type(5):before { content: "END"; }
-	td:nth-of-type(6):before { content: "Actions"; }
+	td:nth-of-type(1):before { content: "Time"; }
+	td:nth-of-type(2):before { content: "Table #"; }
+	td:nth-of-type(3):before { content: "Items"; }
+	td:nth-of-type(4):before { content: "Amount"; }
+	td:nth-of-type(5):before { content: "View"; }
+	
 	
 }
