--- a/assets/user_defined/sales/sales.css
+++ b/assets/user_defined/sales/sales.css
@@ -1,7 +1,8 @@
-#preview-content{
-	
-	padding:5px;
+
+.priceField::before{
+	content: '₱';
 }
+
 @media 
 only screen and (max-width: 760px),
 (min-device-width: 768px) and (max-device-width: 1024px)  {
